--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@ body {
 <p style="color:white"> 
 	
   My name is Bryan Yu and I am currently a freshman attending San Jose State University. 
-  I am majoring in studio art. Although my I am better versed in traditional art, I have an interest in digital media. In my projects page, you will find traditional works, digital works, as well as some photos that I took. 
+  I am majoring in studio art. Although my I am better versed in traditional art, I have an interest in digital media. In my projects page, you will find traditional works, digital works, as well as some photos that I took. I've been making art for several years now, starting in elementary school. My inspirations come from things I'm interested in, things I observe in everyday life, and curiosity of the world around me.  
 
 </p>
 
