--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@ body {
 
    <div class="column">
     <div class="content">
-    <img src="img/8.JPG" alt="morning_dew" style="width:100%">
+    <img src="img/8.jpg" alt="morning_dew" style="width:100%">
     <h3>Morning Dew</h3>
       <p>Photo of flower early in the morning. The dew has not evaporated from the leaf yet.</p>
   </div>
@@ -113,7 +113,7 @@ body {
 
 <div class="column">
     <div class="content">
-    <img src="img/10.JPG" alt="building2" style="width:100%" style="height:90%">
+    <img src="img/10.jpg" alt="building2" style="width:100%" style="height:90%">
     <h3>Night Lights 2</h3>
       <p>Photo of the side of a burger joint. The lamps and red lighting make the image interesting.</p>
   </div>
@@ -121,7 +121,7 @@ body {
 
 <div class="column">
     <div class="content">
-    <img src="img/11.PNG" alt="windy_day" style="width:100%">
+    <img src="img/11.png" alt="windy_day" style="width:100%">
     <h3>Windy day at the Palace</h3>
       <p>Photo taken during a summer trip to China. The wind blowing the branches gives it a peaceful and serene feel.</p>
   </div>
@@ -129,7 +129,7 @@ body {
 
 <div class="column">
     <div class="content">
-    <img src="img/12.PNG" alt="rain" style="width:100%">
+    <img src="img/12.png" alt="rain" style="width:100%">
     <h3>Summer Rain</h3>
       <p>Taken during a summer trip to China during a nighttime thunderstorm.</p>
   </div>
@@ -137,7 +137,7 @@ body {
     
 <div class="column">
     <div class="content">
-    <img src="img/13.PNG" alt="rain" style="width:100%">
+    <img src="img/13.png" alt="rain" style="width:100%">
     <h3>Calm Fishing Hole</h3>
       <p>Photo of a boat resting on a manmade pond in rural China.</p>
   </div>
