--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@ body {
 
    <div class="column">
     <div class="content">
-    <img src="img/8.jpg" alt="morning_dew" style="width:100%">
+    <img src="img/8.JPG" alt="morning_dew" style="width:100%">
     <h3>Morning Dew</h3>
       <p>Photo of flower early in the morning. The dew has not evaporated from the leaf yet.</p>
   </div>
