--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 body {
 	background-size: cover;
 	background-repeat: repeat;
-	background-image: url("portfolioBG.PNG")
+	background-image: url("portfolioBG.png")
  }
 
 
