--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 body {
 	background-size: cover;
 	background-repeat: repeat;
-	background-image: url("portfolioBG.PNG")
+	background-image: url("portfolioBG.png")
  }
 
 
