--- a/projects.html
+++ b/projects.html
@@ -145,7 +145,7 @@ body {
 
 <div class="column">
     <div class="content">
-    <img src="img/14.PNG" alt="dino_thing" style="width:100%">
+    <img src="img/14.png" alt="dino_thing" style="width:100%">
     <h3>Weird Dino MashUp</h3>
       <p>Created in Meshmixer. Inspired by how dinosaur were thought to have looked when first found. </p>
   </div>
@@ -153,7 +153,7 @@ body {
 
 <div class="column">
     <div class="content">
-    <img src="img/15.PNG" alt="processing" style="width:100%">
+    <img src="img/15.png" alt="processing" style="width:100%">
     <h3>A Mess of Shapes</h3>
       <p>Created in Processing. Is a bunch of shapes that appear depending on if certain actions are done.</p>
   </div>
