--- a/projects.html
+++ b/projects.html
@@ -161,7 +161,7 @@ body {
 	
 <div class="column">
     <div class="content">
-    <img src="img/16.png" alt="final" style="width:100%">
+    <img src="img/16.jpg" alt="final" style="width:100%">
     <h3>Look Towards the Sky</h3>
       <p>Created in Photoshop. Is a representation of me. It is also a representation of me looking forward to what's next.</p>
   </div>
